# KenomaEngine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  REFACTORING.md
data/models/: SM_Deccer_Cubes.gltf  SM_Deccer_Cubes_Textured.gltf  SM_Deccer_Cubes_Textured_Complex.gltf  SM_Deccer_Cubes_Textured_Embedded.gltf  SM_Deccer_Cubes_With_Rotation.gltf
data/models/AntiqueCameraTangents/: AntiqueCamera.gltf
data/models/DamagedHelmetTangents/: DamagedHelmet.gltf
data/models/FireExtinguisher/: FireExtinguisher.gltf
data/models/gltfCube/: BoxWithSpaces.gltf
data/shaders/: cubemap.fs.glsl  lit.fs.glsl  lit.vs.glsl  main.fs.glsl  main.vs.glsl  singleColor.fs.glsl  unlit.fs.glsl  unlit.vs.glsl
lib/: CMakeLists.txt
src/Kenoma/: Asset.hpp  CMakeLists.txt  Camera.hpp  Cubemap.cpp  Cubemap.hpp  EngineTools.cpp  EngineTools.hpp  GameObject.cpp  GameObject.hpp  KenomaEngine.cpp  Light.cpp  Light.hpp  LitMaterial.cpp  LitMaterial.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.hpp  UnlitMaterial.cpp  UnlitMaterial.hpp
src/Kenoma.Engine/: Application.cpp  CMakeLists.txt
src/Kenoma.Engine/include/Project.Library/: Application.hpp
src/Kenoma/include/Project/: KenomaEngine.hpp
src/Project/: CMakeLists.txt  Camera.h  KenomaEngine.cpp  Main.cpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ProjectApplication.cpp  Shader.hpp
src/Project.Library/: Application.cpp
src/Project.Library/include/Project.Library/: Application.hpp
src/Project/include/Project/: ProjectApplication.hpp
